--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -172,13 +172,69 @@ a {
 /* Fim do Lista*/
 
 /* Configurações contatos unicos */
+.about {
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+}
 
+.about .picture {
+    padding: 1rem;
+}
+
+.about .picture img {
+    width: 100%;
+    height: 100%;
+    max-height: 38rem;
+    max-width: 28rem;
+    object-fit: cover;
+}
 .single-contact h1 {
     font-size: 3rem;
 }
 
 .single-contact p {
     font-size: 1.8rem;
+}
+
+.btn {
+  background-color: var(--link-dark-color);
+  color: var(--clr-white);
+  font-weight: bold;
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: var(--default-border-radius);
+  cursor: pointer;
+  transition: filter var(--transition-fast) ease-in-out;
+}
+
+.btn:hover {
+  filter: brightness(90%);
+}
+
+.btn:focus,
+.btn:active {
+  filter: brightness(80%);
+  box-shadow: 0 0 5px var(--link-dark-color);
+}
+
+.contact-links {
+  margin-block: calc(var(--small-font-size) * 2);
+  display: flex;
+  align-items: center;
+  gap: 0 var(--spacing);
+}
+
+.btn-link {
+  font-size: var(--small-font-size);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 1rem;
+  display: block;
+  line-height: var(--small-font-size);
+}
+
+.btn-delete {
+  background: tomato;
 }
 
 /* Fim configuração lista */
@@ -291,45 +347,11 @@ a {
   font-size: var(--smaller-font-size);
 }
 
-.btn {
-  background-color: var(--link-dark-color);
-  color: var(--clr-white);
-  font-weight: bold;
-  border: none;
-  padding: 1rem 2rem;
-  border-radius: var(--default-border-radius);
-  cursor: pointer;
-  transition: filter var(--transition-fast) ease-in-out;
-}
-
-.btn:hover {
-  filter: brightness(90%);
-}
-
-.btn:focus,
-.btn:active {
-  filter: brightness(80%);
-  box-shadow: 0 0 5px var(--link-dark-color);
-}
-
-.contact-links {
-  margin-block: calc(var(--small-font-size) * 2);
-  display: flex;
-  align-items: center;
-  gap: 0 var(--spacing);
-}
-
-.btn-link {
-  font-size: var(--small-font-size);
-  text-decoration: none;
-  font-weight: bold;
-  padding: 1rem;
-  display: block;
-  line-height: var(--small-font-size);
-}
-
-.btn-delete {
-  background: tomato;
+.form-group img {
+    max-height: 38rem;
+    max-width: 28rem;
+    display: block;
+    margin: 0 auto;
 }
 
 /* Fim configuração de usuário*/
