--- a/contact/templates/contact/partials/inf_contact.html
+++ b/contact/templates/contact/partials/inf_contact.html
@@ -1,12 +1,35 @@
 <div class="single-contact">
-    <h1 class="single-contact-name">
-        {{ contact.first_name }} {{ contact.last_name }}
-    </h1>
+    <div class="about">
+        <div class="infs"> 
+            <h1>
+                {{ contact.first_name }} {{ contact.last_name }}
+            </h1>
 
-    <p><b>ID:</b> {{ contact.id }}</p>
-    <p><b>E-Mail:</b> {{ contact.email }}</p>
-    <p><b>Phone:</b> {{ contact.phone }}</p>
-    <p><b>Created Date:</b> {{ contact.date }}</p>
-    <p><b>Description:</b> {{ contact.description }}</p>
-    <p><b>Category:</b> {{ contact.category.name }}</p>
+            <p><b>ID:</b> {{ contact.id }}</p>
+            <p><b>E-Mail:</b> {{ contact.email }}</p>
+            <p><b>Phone:</b> {{ contact.phone }}</p>
+            <p><b>Created Date:</b> {{ contact.date }}</p>
+            <p><b>Description:</b> {{ contact.description }}</p>
+            <p><b>Category:</b> {{ contact.category.name }}</p>
+        </div>
+        <div class="picture">
+            {% if contact.picture %}
+                <img src="{{ contact.picture.url }}" alt="{{ contact.first_name }} {{ contact.last_name }}">
+            {% endif %}
+        </div>
+    </div>   
+
+    <div class="contact-links">
+        <a class='btn btn-link' href="{% url 'contact:update' contact.id %}">Update</a>
+
+        <form action="{% url 'contact:delete' contact.id %}" method="POST">
+            {% csrf_token %}
+            {% if confirmation == 'no' %}
+                <input type="hidden" name=confirmation value='yes'>
+                <button class="btn btn-link btn-delete" type='submit'>Confirmar?</button>
+            {% else %}
+                <button class="btn btn-link btn-delete" type='submit'>Delete</button>
+            {% endif %}
+        </form>
+    </div>
 </div>
