--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -73,19 +73,19 @@ a {
 }
 
 .login {
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-top: 1.5rem;
-    margin-right: 2rem;
-    padding: 1.5rem 1.5rem 2rem;
     display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    border: 0.1rem solid var(--color-main-shadow);
-    border-radius: 50%;
-    text-align: center;
+    flex-direction: row;
+    justify-content: center;
     font-size: 1.5rem;
+}
+
+.login h3 {
+    padding: 1rem;
+    transition: background-color var(--transition-fast) ease-in-out;
+}
+
+.login h3:hover {
+    background: var(--color-white)
 }
 
 .content-search {
@@ -268,7 +268,6 @@ a {
 .message {
   max-width: 600px;
   margin: var(--spacing) auto;
-  margin-top: calc(var(--spacing) * 2);
   padding: var(--spacing);
   text-align: center;
   border-radius: var(--default-border-radius);
