--- a/contact/templates/contact/partials/inf_contact.html
+++ b/contact/templates/contact/partials/inf_contact.html
@@ -18,18 +18,19 @@
             {% endif %}
         </div>
     </div>   
+    {% if user == contact.owner %}
+        <div class="contact-links">
+            <a class='btn btn-link' href="{% url 'contact:update' contact.id %}">Update</a>
 
-    <div class="contact-links">
-        <a class='btn btn-link' href="{% url 'contact:update' contact.id %}">Update</a>
-
-        <form action="{% url 'contact:delete' contact.id %}" method="POST">
-            {% csrf_token %}
-            {% if confirmation == 'no' %}
-                <input type="hidden" name=confirmation value='yes'>
-                <button class="btn btn-link btn-delete" type='submit'>Confirmar?</button>
-            {% else %}
-                <button class="btn btn-link btn-delete" type='submit'>Delete</button>
-            {% endif %}
-        </form>
-    </div>
+            <form action="{% url 'contact:delete' contact.id %}" method="POST">
+                {% csrf_token %}
+                {% if confirmation == 'no' %}
+                    <input type="hidden" name=confirmation value='yes'>
+                    <button class="btn btn-link btn-delete" type='submit'>Confirmar?</button>
+                {% else %}
+                    <button class="btn btn-link btn-delete" type='submit'>Delete</button>
+                {% endif %}
+            </form>
+        </div>
+    {% endif %}
 </div>
